tests/spec/format/snapshots/match_nested.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match x { Some(a) => match a { 1 => \"one\", _ => \"other\" }, None => \"none\" } }"
---
fn test() {
  match x {
    Some(a) => match a {
      1 => "one",
      _ => "other",
    },
    None => "none",
  }
}
