tests/spec/format/snapshots/match_pattern_literal.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match x { 1 => \"one\", 2 => \"two\", _ => \"other\" } }"
---
fn test() {
  match x {
    1 => "one",
    2 => "two",
    _ => "other",
  }
}
