tests/spec/format/snapshots/match_pattern_slice_empty.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match items { [] => \"empty\", _ => \"not empty\" } }"
---
fn test() {
  match items {
    [] => "empty",
    _ => "not empty",
  }
}
