tests/spec/format/snapshots/match_pattern_slice_fixed.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match items { [a, b, c] => a + b + c, _ => 0 } }"
---
fn test() {
  match items {
    [a, b, c] => a + b + c,
    _ => 0,
  }
}
