tests/spec/format/snapshots/match_pattern_slice_rest.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match items { [first, ..rest] => first, [] => 0 } }"
---
fn test() {
  match items {
    [first, ..rest] => first,
    [] => 0,
  }
}
