tests/spec/format/snapshots/match_pattern_struct.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match p { Point { x, y } => x + y } }"
---
fn test() {
  match p {
    Point { x, y } => x + y,
  }
}
