tests/spec/format/snapshots/match_pattern_struct_empty.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match p { Empty {} => \"empty\" } }"
---
fn test() {
  match p {
    Empty {} => "empty",
  }
}
