tests/spec/format/snapshots/match_pattern_struct_renamed.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match p { Point { x: a, y: b } => a + b } }"
---
fn test() {
  match p {
    Point { x: a, y: b } => a + b,
  }
}
