tests/spec/format/snapshots/match_pattern_struct_rest.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match shape { Shape.Circle { radius, .. } => radius, _ => 0 } }"
---
fn test() {
  match shape {
    Shape.Circle { radius, .. } => radius,
    _ => 0,
  }
}
