tests/spec/format/snapshots/match_pattern_tuple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match pair { (a, b) => a + b } }"
---
fn test() {
  match pair {
    (a, b) => a + b,
  }
}
