tests/spec/format/snapshots/match_pattern_unit.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { match u { () => \"unit\" } }"
---
fn test() {
  match u {
    () => "unit",
  }
}
